--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,10 +4,11 @@
         "Lab-2",
         "Lab-1/src",
         "LAB-9",
+        "LAB-8",
         "LAB-7",
         "LAB-6",
         "LAB-5",
         "LAB-4",
-        "LAB-8"
+        "LAB-10"
     ]
 }
