--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,8 @@
         "LAB-6",
         "LAB-5",
         "LAB-4",
+        "LAB-11",
         "LAB-10",
-        "LAB-11"
+        "LAB-12"
     ]
 }
