--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,8 +9,9 @@
         "LAB-6",
         "LAB-5",
         "LAB-4",
+        "LAB-12",
         "LAB-11",
         "LAB-10",
-        "LAB-12"
+        "Threading"
     ]
 }
